--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^3.3.18
   firebase_core: ^1.17.0
   modal_progress_hud_nsn: ^0.2.1
+  get: ^4.6.5
+  get_storage:
+  pdf:
 
 dev_dependencies:
   flutter_test:
