--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   direct_select_flutter: ^1.1.1
   cloud_firestore: ^3.1.15
-  cloud_functions:
   firebase_auth: ^3.3.18
   firebase_core: ^1.17.0
   modal_progress_hud_nsn: ^0.2.1
   get: ^4.6.5
   get_storage:
   pdf:
+  ready: ^1.2.8
+  cloud_functions:
 
 dev_dependencies:
   flutter_test:
