--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   get_storage:
   pdf:
   ready: ^1.2.8
-  cloud_functions:
+  cloud_functions: ^3.3.0
 
 dev_dependencies:
   flutter_test:
